{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerContol",
            "id": "497c6d41-fe78-4031-be34-e1fcfa6f334a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "b55cfd81-ba9c-462c-b019-1279b880d662",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnSkillInput",
                    "type": "Button",
                    "id": "414f7c17-6a60-40ce-91c6-bed57951e9fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8ce5e75-32d4-4a7c-89a0-9052df22066c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "716db0f0-c0e6-4f76-96bb-39025b8dcd9e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSkillInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "090e32fe-f22a-4dca-908b-858c7414755f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSkillInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c5288b8-c55f-47b9-bdfd-a3b67e466b20",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSkillInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91dcb7c7-25d0-4760-abc5-fe85e2fc150f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSkillInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85803e1e-e131-4902-b71d-7941548db6bc",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnSkillInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}